<resources>
    <string name="app_name">MayTinh</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="tbB">Number B</string>
    <string name="tbA">Number A</string>
    <string name="cong">+</string>
    <string name="tru">-</string>
    <string name="nhan">/</string>
    <string name="chia">*</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="cal">Cal</string>
    <string name="reset">Reset</string>
    <string name="exit">Exit</string>
    <string name="log">Log</string>
    <string name="x_2">x^2</string>
    <string name="sqrt">Sqrt</string>
    <string name="giai_pt">Giải PT</string>
</resources>
